# experiment_utils

./: .flake8  .gitignore  Makefile  README.md  settings.ini  setup.cfg  setup.py
Nbs/: index.ipynb
docs/: _config.yml  consistency.html  data_imagenette.html  experiment.html  index.html  ranger.html  sidebar.json  utils.html
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
experiment_utils/: __init__.py  _nbdev.py  data_imagenette.py  exp_defaults.py  exp_hydra.py  experiment.py  fastai_utils.py  logger.py  logger_v1.py  train.py  train_fastai.py  train_hydra.py  utils.py
experiment_utils/conf/: config.yaml
experiment_utils/conf/__dataloader__/: base_dl.yaml
experiment_utils/conf/__dataset__/: train_ds.yaml
experiment_utils/conf/data/: imagenette-320.yaml  imagenette.yaml  imagewoof-320.yaml  imagewoof.yaml
experiment_utils/conf/dataloader/: base_dl.yaml
experiment_utils/conf/dataset/: ImageFolderDataset.yaml  val_ds.yaml
experiment_utils/conf/dls/: fastai_default.yaml  pt.yaml  pt_dls.yaml  pt_dls2.yaml  pt_dls_timm.yaml  pt_timm.yaml
experiment_utils/conf/loss_fn/: CrossEntropyLoss.yaml  LabelSmoothingCrossEntropy.yaml
experiment_utils/conf/model/: mc.yaml  resnet18.yaml  (+19 more)
experiment_utils/conf2/: config.yaml
experiment_utils/models/: __init__.py  xresnet.py
experiment_utils/utils/: cl_app.py  fastai_utils.py  hydra_utils.py  import_utils.py  jupyter_utils.py  log_utils.py  model_utils.py  utils.py
nbs/: 00_experiment.ipynb  01_utils.ipynb  02_consistency.ipynb  03_data_imagenette.ipynb  50_ranger.ipynb  index.ipynb
(+127 files in other folders)
