[metadata]
name = experiment_utils
author = Yasyrev Andrei
author_email = a.yasyrev@gmail.com
description = Helpers utils for manage and track pytorch experiments.
keywords = DL pytorch experiment.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ayasyrev/experiment_utils
license = apache2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    Nbs*
    docs*